grammar.ebnf
document       = {section | list | quote | style | text}
section        = {heading}, {section | list | quote | style | text}
heading        = "#", {text} | '##', {text} | '###', {text}
list           = "-", {list_item}
list_item      = "-", {text} | {text}
quote          = ">", {text}
bold           = "*", {text} | "*", {escape, text}, "*"
italic         = "/", {text} | "/", {escape, text}, "/"
code           = "`", {text} | "`", {escape, text}, "`"
strikethrough  = "~", {text} | "~", {escape, text}, "~"
escape         = `\`, ? any character ?
text           = ? any character except '*', '/', '`', '~', `\` ?
style          = bold | italic | code | strikethrough
